// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Snapshots Tab 1`] = `
<table
  className="sc-AykKC QXPLA"
  onClick={[Function]}
>
  <thead>
    <tr>
      <th
        onClick={[Function]}
      >
        name
      </th>
      <th
        onClick={[Function]}
      >
        lol
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        onClick={[Function]}
      >
        <h3 />
      </td>
    </tr>
    <tr>
      <td
        onClick={[Function]}
      >
        <h3 />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table Snapshots Table 1`] = `
<table
  className="sc-AykKC QXPLA"
>
  <thead>
    <tr>
      <th>
        <i>
          name
        </i>
      </th>
      <th>
        <i>
          lol
        </i>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <h3 />
      </td>
    </tr>
    <tr>
      <td>
        <h3 />
      </td>
    </tr>
  </tbody>
</table>
`;
